# bill-ai

./: extract_text.py  pyproject.toml
lib/: __init__.py  casing.py  content_descriptors.py  content_group.py  content_type.py  document.py  heading_accumulator.py  section.py
tests/: heading_accumulator_test.py  section_test.py
